fixing alignment

--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -188,8 +188,7 @@
   }
   .navbar-fixed-top,
   .navbar-fixed-bottom {
-    margin-right: -20px;
-    margin-left: -20px;
+   
   }
   .container-fluid {
     padding: 0;
